--- a/sidbar/package.json
+++ b/sidbar/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.0-rc.3",
     "usestate": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
